--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "npm run e2e"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue": "2.5.2",
+    "vue-router": "3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -48,7 +48,7 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "2.5.2",
     "portfinder": "^1.0.13",
     "webpack": "^3.6.0",
     "webpack-dev-middleware": "^1.12.0",
