--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "npm run e2e"
   },
   "dependencies": {
+    "bootstrap": "4.0.0-beta.2",
+    "bootstrap-vue": "1.0.2",
     "vue": "2.5.2",
     "vue-router": "3.0.1"
   },
