--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "4.0.0-beta.2",
     "bootstrap-vue": "1.0.2",
     "vue": "2.5.2",
+    "vue-resource": "^1.3.4",
     "vue-router": "3.0.1"
   },
   "devDependencies": {
